--- a/src/App.css
+++ b/src/App.css
@@ -349,6 +349,14 @@ section h2{
   }
 }
 /* Shop.jsx */
+.Shoe{
+  /* background-color: red; */
+  max-height: 100%;
+  margin-bottom: 30px;
+
+}
+
+
 .shoe-shop{
   display: grid;
   grid-template-columns:repeat(3, 1fr);
@@ -363,9 +371,10 @@ section h2{
 
 /* ShopCard.jsx */
 .card{
-  width: 300px;
-    height: 420px;                 /* ✅ fixed height */
+  width: 320px;
+  height: 480px;                 /* ✅ fixed height */
   border-radius: 20px;
+  padding-bottom: 20px;
   box-shadow: 10px 10px 20px rgba(0,0,0,0.3);
   overflow: hidden;
 }
@@ -402,6 +411,12 @@ section h2{
   color: red;
   font-size: 20px;
 }
+.shoe-content h2{
+  white-space: nowrap;
+  /* overflow: hidden; */
+  text-overflow: ellipsis;}
+
+/* Catergioes Part */
 .categories{
   display: grid;
   grid-template-columns: repeat(3,1fr);
@@ -411,7 +426,7 @@ section h2{
 }
 .cat{
   width: 100%;
-  height: 85vh;
+ height: 85vh;
   background-color: rgb(252, 252, 252);
   box-shadow: 0px 15px 10px gray;
   border-radius: 20px;
@@ -464,4 +479,49 @@ section h2{
   border: 2px solid gray;
   margin: 10px 0px;
   border-radius: 30px;
+}
+
+/* Add to Shop-cart button */
+.cart{
+  padding: 10px 20px;
+}
+.btn-cart{
+  width: 100%;
+  padding: 24px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  color: var(--red);
+  border: 1px solid var(--red);
+  transition: all .8s ease;
+
+
+  &:hover{
+  border-radius: 30px;
+  background-color: var(--red);
+  color: #ffffff;
+  font-size: 16px;
+  }
+}
+.btn-cart:active{
+  scale: .9;
+}
+/* pagination */
+.pagination{
+  margin-top: 3%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.pagination button {
+  background-color: rgb(255, 255, 255);
+  color: var(--red);
+  border: 1px solid var(--red);
+  transition: all .7s ease;
+  &:hover{
+    background-color: red;
+    color: white;
+  }
+}
+.pagination button:active{
+  scale: 1.2;
 }
